--- a/src/index.scss
+++ b/src/index.scss
@@ -3,42 +3,214 @@
 //fin Fonts
 
 body {
-    background-image: url(./img/background.jpg);
-    
+    background-image: url(./components/assets/fondo-articles.avif);
+    font-family: 'Play', sans-serif;
+    background-size: cover;
+    margin: 0;
+
+}
+
+h1 {
+    margin: 0;
+}
+
+h2 {
+    margin: 10px;
 }
 
 .h1Welcome {
     font-size: 3rem;
     justify-content: center;
     display: flex;
-    font-family: 'Play', sans-serif;
-    color:rgb(46, 42, 42);
+    color: rgb(46, 42, 42);
     text-shadow: 0 1px 0px #378ab4, 1px 0 0px #5dabcd, 1px 2px 1px #378ab4, 2px 1px 1px #5dabcd, 2px 3px 2px #378ab4, 3px 2px 2px #5dabcd, 3px 4px 2px #378ab4, 4px 3px 3px #5dabcd, 4px 5px 3px #378ab4, 5px 4px 2px #5dabcd, 5px 6px 2px #378ab4, 6px 5px 2px #5dabcd, 6px 7px 1px #378ab4, 7px 6px 1px #5dabcd, 7px 8px 0px #378ab4, 8px 7px 0px #5dabcd;
 }
 
 .component {
-    display: flex;
-    justify-content:end;
-    max-width: 100%;
-    background-color: #d00000;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
 }
 
-.component button {
+.component img {
+    max-width: 15%;
+}
+
+.optionsComponent {
+    background-image: url(https://images.ctfassets.net/s5n2t79q9icq/51L580wX82rdZeT1KEwV0x/7f602600003e34887fbd42f3b65a6447/dsnbdjalud.jpg?q=80&w=1920&h=149&fit=crop&f=center&fm=avif);
+    background-size: cover;
+    width: 100%;
+    padding: 0.5rem;
+    margin: 0;
+}
+
+.ActiveOption {
     margin: 1.5rem;
     font-size: 1.5rem;
-    border-style: none;
-    background: none;
+    font-family: 'Play', sans-serif;
+    color: aliceblue;
+    text-decoration: none;
+}
+
+.Option {
+    margin: 1.5rem;
+    font-size: 1.5rem;
+    font-family: 'Play', sans-serif;
+    color: aliceblue;
+    text-decoration: none;
+}
+
+.component img:hover {
+    filter: saturate(150%);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+    transition: 0.5s;
 }
 
 .ShoppingCart {
     display: flex;
     align-items: center;
-    margin-right: 1rem;
+    margin-left: 2%;
 }
 
 .ShoppingCart img {
-    max-width: 3rem;
-    max-height: 3rem;
-    margin-left: 18px;
-    
+    max-width: 5rem;
+    max-height: 2.5rem;
+}
+
+.ShoppingCart:hover {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    transition: 1s;
+}
+
+
+.shopCart {
+    display: flex;
+    justify-content: start;
+    border-style: solid;
+    width: 100%;
+    border-width: 2px;
+    border-color: #c1121f;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+
+.bannerImg {
+    background-size: cover;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    z-index: 0;
+}
+
+.bannerTittle {
+    height: auto;
+    position: relative;
+}
+
+
+// Cards de productos
+
+.ListGroup {
+    background: url(https://images.ctfassets.net/s5n2t79q9icq/6pzeC2O6vI2kXQDQMvBHG/980231b776db885ff918e79a224500d3/cna32kdo_1920x1050.jpg?q=80&w=1920&h=1050&fit=crop&f=center&fm=avif);
+    display: flex;
+    position: relative;
+    justify-content: center;
+    width: 100%;
+    height: 50%;
+}
+
+.cardItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    width: 50%;
+    height: 50%;
+}
+
+.itemImg {
+    width: 100%;
+    margin-right: 10px;
+}
+
+//sin el siguiente estilo de componente no se ve correctamente al presionar en 'Mas Info'
+.itemDetailContainer {
+    background: url(https://images.ctfassets.net/s5n2t79q9icq/6pzeC2O6vI2kXQDQMvBHG/980231b776db885ff918e79a224500d3/cna32kdo_1920x1050.jpg?q=80&w=1920&h=1050&fit=crop&f=center&fm=avif);
+    display: flex;
+    position: relative;
+    justify-content: center;
+    width: 100%;
+    height: 50%;
+}
+
+.itemHeader {
+    color: whitesmoke;
+    font-weight: 900;
+    text-shadow: 0 1px 3px;
+}
+
+.info {
+    color: whitesmoke;
+    text-align: center;
+}
+
+.infoDesc {
+    font-size: 15px;
+    color: aliceblue;
+    text-align: center;
+}
+
+.infoCat {
+    font-size: 20px;
+    color: aliceblue;
+    text-align: center;
+}
+
+.itemFooter {
+    background-color: #7a3131;
+    border-radius: 8px/50%;
+    border-color: #fff;
+    border-style: solid;
+    width: 15%;
+    height: 4%;
+    align-items: center;
+}
+
+.counter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.controls {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.button {
+    margin: 0 5px;
+}
+
+.number {
+    color: aliceblue;
+    font-size: 20px;
+    text-align: center;
+}
+
+.buttonCart {
+    background-color: #7a3131;
+    border-radius: 8px/50%;
+    border-color: #fff;
+    border-style: solid;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
 }
