--- a/src/index.scss
+++ b/src/index.scss
@@ -133,9 +133,22 @@ h2 {
     height: 50%;
 }
 
+.barsItem {
+    background: url(https://images.ctfassets.net/s5n2t79q9icq/51L580wX82rdZeT1KEwV0x/7f602600003e34887fbd42f3b65a6447/dsnbdjalud.jpg?q=80&w=1920&h=149&fit=crop&f=center&fm=avif);
+    background-size: cover;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+}
+
 .itemImg {
     width: 100%;
     margin-right: 10px;
+    display: flex;
+    position: relative;
+    margin: 0;
 }
 
 //sin el siguiente estilo de componente no se ve correctamente al presionar en 'Mas Info'
@@ -152,6 +165,19 @@ h2 {
     color: whitesmoke;
     font-weight: 900;
     text-shadow: 0 1px 3px;
+    display: flex;
+    position: relative;
+    justify-content: center;
+}
+
+.barsHeader {
+    color: whitesmoke;
+    font-weight: 900;
+    font-size: 28px;
+    text-shadow: 2px 2px 4px rgb(0, 0,0.6);
+    display: flex;
+    position: relative;
+    justify-content: center;
 }
 
 .info {
@@ -179,6 +205,17 @@ h2 {
     width: 15%;
     height: 4%;
     align-items: center;
+}
+
+.contentComponent {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: #7a3131;
+    border-radius: 8px/50%;
+    border-color: #fff;
+    border-style: solid;
+    width: 10%;
 }
 
 .counter {
@@ -213,4 +250,23 @@ h2 {
     border: none;
     padding: 10px 20px;
     cursor: pointer;
+}
+
+.interLine {
+    display: flex;
+    background-image: url(../src/components/assets/InterLineBackground.avif);
+    background-size: cover;
+    background-position: center;
+    position:relative
+}
+
+.interLineHeader {
+    color: white;
+    text-shadow: 2px 2px 4px rgb(0, 0, 1);
+    padding: 5%;
+    justify-content: center;
+}
+
+.boostPack {
+    padding-top: 10%;
 }
